# xi-mac

./: .gitignore  build-rust-xcode.sh
XiEditor/: EditViewController.swift
XiEditor.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/src/: main.rs
rust/syntect-plugin/: Cargo.toml
rust/syntect-plugin/src/: main.rs
